<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentExhibitionsEdit">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/layoutSetTextExhibition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/choice" />

        <TextView
            android:id="@+id/textSave"
            style="@style/StyleHeaderGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    </LinearLayout>


    <TextView
        android:id="@+id/textView6"
        style="@style/StyleHeaderGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/newNote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/namePetMenuAction"
        style="@style/StyleTextBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/heading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
            android:id="@+id/editText11"
        style="@style/StyleEditTextLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namePetMenuAction" />


    <Spinner
        android:id="@+id/spinner"
        style="@style/StyleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/status"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/namePetMenuAction"
        app:layout_constraintTop_toBottomOf="@+id/editText11" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_line_green"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="@+id/editText11"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        />

    <TextView
        android:id="@+id/textView25"
        style="@style/StyleTextBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/data"
        app:layout_constraintStart_toStartOf="@+id/editText11"
        app:layout_constraintTop_toBottomOf="@+id/imageView14" />

    <LinearLayout
        android:id="@+id/linearLayout12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/textView25"
        app:layout_constraintTop_toBottomOf="@+id/textView25">

        <EditText
            android:id="@+id/day"
            style="@style/StyleNumberDayMount"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            style="@style/StyleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="." />

        <EditText
            android:id="@+id/mount"
            style="@style/StyleNumberDayMount"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            style="@style/StyleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="." />

        <EditText
            android:id="@+id/age"
            style="@style/StyleNumberAge"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            style="@style/StyleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/tochG" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView26"
        style="@style/StyleTextBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/expertName"
        app:layout_constraintStart_toStartOf="@+id/linearLayout12"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout12" />

    <EditText
        android:id="@+id/editText12"
        style="@style/StyleEditTextLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <TextView
        android:id="@+id/textView27"
        style="@style/StyleTextBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/noteMed"
        app:layout_constraintStart_toStartOf="@+id/editText12"
        app:layout_constraintTop_toBottomOf="@+id/editText12" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/note_med"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <EditText
        android:id="@+id/pole_note2"
        style="@style/StyleEditTextLarge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:alpha="0.5"
        android:background="@color/transparent"
        android:focusable="true"
        android:hint="Введите текст"
        android:maxLines="4"
        android:maxLength="200"
        android:inputType="textMultiLine|text"
        android:textColorHint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />


    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_plus_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2" />

    <TextView
        style="@style/StyleHeaderGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addPhoto"
        app:layout_constraintStart_toEndOf="@id/imageView12"
        app:layout_constraintTop_toTopOf="@id/imageView12" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_plus_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView12" />

    <TextView
        android:id="@+id/textView13"
        style="@style/StyleHeaderGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addFile"
        app:layout_constraintStart_toEndOf="@id/imageView13"
        app:layout_constraintTop_toTopOf="@id/imageView13" />

    <LinearLayout
        android:id="@+id/layoutSetTextExhibition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <ImageView
            android:id="@+id/imageSetTextExhibition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:src="@drawable/clock" />

        <TextView
            android:id="@+id/textSetTextExhibition"
            style="@style/StyleHeaderGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setclock" />
    </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>