<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentVaccineEdit">

    <TextView
        android:id="@+id/textView6"
        style="@style/StyleHeaderGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/newNote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        style="@style/StyleTextBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/data"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/day"
        style="@style/StyleNumberDayMount"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/mount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="."
        app:layout_constraintBottom_toBottomOf="@+id/day"
        app:layout_constraintStart_toEndOf="@+id/day" />

    <EditText
        android:id="@+id/editText2"
        style="@style/StyleNumberDayMount"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/day"
        app:layout_constraintStart_toEndOf="@+id/mount" />

    <TextView
        android:id="@+id/textView9"
        style="@style/StyleNumberDayMount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="."
        app:layout_constraintBottom_toBottomOf="@+id/editText2"
        app:layout_constraintStart_toEndOf="@+id/editText2" />

    <EditText
        android:id="@+id/age"
        style="@style/StyleNumberAge"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/day"
        app:layout_constraintStart_toEndOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        style="@style/StyleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/tochG"
        app:layout_constraintBottom_toBottomOf="@+id/age"
        app:layout_constraintStart_toEndOf="@+id/age" />


    <TextView
        android:id="@+id/textView10"
        style="@style/StyleTextBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/drugName"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/param"
        style="@style/StyleEditTextLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        style="@style/StyleTextBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/validity"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/param" />

    <TextView
        android:id="@+id/textView13"
        style="@style/StyleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/before"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />


    <EditText
        android:id="@+id/editText5"
        style="@style/StyleNumberDayMount"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        style="@style/StyleNumberDayMount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="."
        app:layout_constraintBottom_toBottomOf="@+id/editText5"
        app:layout_constraintStart_toEndOf="@+id/editText5" />

    <EditText
        android:id="@+id/editText6"
        style="@style/StyleNumberDayMount"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/editText5"
        app:layout_constraintStart_toEndOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView15"
        style="@style/StyleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="."
        app:layout_constraintBottom_toBottomOf="@+id/editText6"
        app:layout_constraintStart_toEndOf="@+id/editText6" />

    <EditText
        android:id="@+id/editText7"
        style="@style/StyleNumberAge"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/editText6"
        app:layout_constraintStart_toEndOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView16"
        style="@style/StyleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/tochG"
        app:layout_constraintBottom_toBottomOf="@+id/editText7"
        app:layout_constraintStart_toEndOf="@+id/editText7" />

    <TextView
        android:id="@+id/textView17"
        style="@style/StyleTextBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/noteMed"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/note_med"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <EditText
        android:id="@+id/pole_note2"
        style="@style/StyleEditTextNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@color/transparent"
        android:focusable="true"
        android:hint="Введите текст"
        android:maxLength="199"
        android:maxLines="5"
        app:layout_constraintEnd_toEndOf="@+id/param"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <LinearLayout
        android:id="@+id/layoutSetTextVaccination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <ImageView
            android:id="@+id/imageSetTextVaccination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:src="@drawable/clock" />

        <TextView
            android:id="@+id/textSetTextVaccination"
            style="@style/StyleHeaderGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setclock" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/image_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/choice" />

        <TextView
            android:id="@+id/text_btn_save"
            style="@style/StyleHeaderGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>